// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`create a queue 2`] = `
{
  "connections.json": {
    "connections": [],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "@winglang/sdk.std.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_queue",
        "props": {
          "retentionPeriod": 3600,
          "timeout": 30,
        },
        "type": "@winglang/sdk.cloud.Queue",
      },
    ],
    "sdkVersion": "0.0.0",
    "types": {
      "@winglang/sdk.cloud.Api": {
        "className": "Api",
        "sourcePath": "<ABSOLUTE PATH>/api.inflight.js",
      },
      "@winglang/sdk.cloud.Bucket": {
        "className": "Bucket",
        "sourcePath": "<ABSOLUTE PATH>/bucket.inflight.js",
      },
      "@winglang/sdk.cloud.Counter": {
        "className": "Counter",
        "sourcePath": "<ABSOLUTE PATH>/counter.inflight.js",
      },
      "@winglang/sdk.cloud.Domain": {
        "className": "Domain",
        "sourcePath": "<ABSOLUTE PATH>/domain.inflight.js",
      },
      "@winglang/sdk.cloud.Function": {
        "className": "Function",
        "sourcePath": "<ABSOLUTE PATH>/function.inflight.js",
      },
      "@winglang/sdk.cloud.OnDeploy": {
        "className": "OnDeploy",
        "sourcePath": "<ABSOLUTE PATH>/on-deploy.inflight.js",
      },
      "@winglang/sdk.cloud.Queue": {
        "className": "Queue",
        "sourcePath": "<ABSOLUTE PATH>/queue.inflight.js",
      },
      "@winglang/sdk.cloud.Schedule": {
        "className": "Schedule",
        "sourcePath": "<ABSOLUTE PATH>/schedule.inflight.js",
      },
      "@winglang/sdk.cloud.Secret": {
        "className": "Secret",
        "sourcePath": "<ABSOLUTE PATH>/secret.inflight.js",
      },
      "@winglang/sdk.cloud.Service": {
        "className": "Service",
        "sourcePath": "<ABSOLUTE PATH>/service.inflight.js",
      },
      "@winglang/sdk.cloud.Topic": {
        "className": "Topic",
        "sourcePath": "<ABSOLUTE PATH>/topic.inflight.js",
      },
      "@winglang/sdk.cloud.Website": {
        "className": "Website",
        "sourcePath": "<ABSOLUTE PATH>/website.inflight.js",
      },
      "@winglang/sdk.ex.DynamodbTable": {
        "className": "DynamodbTable",
        "sourcePath": "<ABSOLUTE PATH>/dynamodb-table.inflight.js",
      },
      "@winglang/sdk.ex.ReactApp": {
        "className": "ReactApp",
        "sourcePath": "<ABSOLUTE PATH>/react-app.inflight.js",
      },
      "@winglang/sdk.ex.Redis": {
        "className": "Redis",
        "sourcePath": "<ABSOLUTE PATH>/redis.inflight.js",
      },
      "@winglang/sdk.ex.Table": {
        "className": "Table",
        "sourcePath": "<ABSOLUTE PATH>/table.inflight.js",
      },
      "@winglang/sdk.sim.EventMapping": {
        "className": "EventMapping",
        "sourcePath": "<ABSOLUTE PATH>/event-mapping.inflight.js",
      },
      "@winglang/sdk.sim.State": {
        "className": "State",
        "sourcePath": "<ABSOLUTE PATH>/state.inflight.js",
      },
      "@winglang/sdk.std.TestRunner": {
        "className": "TestRunner",
        "sourcePath": "<ABSOLUTE PATH>/test-runner.inflight.js",
      },
    },
  },
  "tree.json": {
    "tree": {
      "children": {
        "cloud.TestRunner": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.70",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_queue": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.70",
          },
          "display": {
            "description": "A distributed message queue",
            "title": "Queue",
          },
          "id": "my_queue",
          "path": "root/my_queue",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.2.70",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`messages are not requeued if the function fails before timeout 1`] = `
[
  "@winglang/sdk.std.TestRunner created.",
  "@winglang/sdk.cloud.Function created.",
  "@winglang/sdk.cloud.Queue created.",
  "@winglang/sdk.sim.EventMapping created.",
  "Push (messages=BAD MESSAGE).",
  "Sending messages (messages=[\\"BAD MESSAGE\\"], subscriber=sim-1).",
  "Invoke (payload=\\"{\\\\\\"messages\\\\\\":[\\\\\\"BAD MESSAGE\\\\\\"]}\\").",
  "Subscriber error - returning 1 messages to queue: ERROR",
  "@winglang/sdk.sim.EventMapping deleted.",
  "@winglang/sdk.cloud.Queue deleted.",
  "@winglang/sdk.cloud.Function deleted.",
  "@winglang/sdk.std.TestRunner deleted.",
]
`;

exports[`messages are not requeued if the function fails before timeout 2`] = `
{
  ".wing/my_queue-setconsumer-e645076f_c8ddc1ce.js": "\\"use strict\\";
exports.handler = async function(event) {
  return await (new (require(\\"[REDACTED]/wingsdk/src/target-sim/queue.setconsumer.inflight.js\\")).QueueSetConsumerHandlerClient({ handler: new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  
async handle(message) {
  if (message === \\"BAD MESSAGE\\") {
    throw new Error(\\"ERROR\\");
  }
}
};
})())({

}), args: {} })).handle(event);
};",
  "connections.json": {
    "connections": [
      {
        "name": "handle()",
        "source": "root/my_queue/my_queue-SetConsumer-e645076f",
        "target": "root/Handler",
      },
      {
        "name": "$inflight_init()",
        "source": "root/my_queue/my_queue-SetConsumer-e645076f",
        "target": "root/Handler",
      },
      {
        "name": "setConsumer()",
        "source": "root/my_queue",
        "target": "root/my_queue/my_queue-SetConsumer-e645076f",
      },
    ],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "@winglang/sdk.std.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_queue/my_queue-SetConsumer-e645076f",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/my_queue-setconsumer-e645076f_c8ddc1ce.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "@winglang/sdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_queue",
        "props": {
          "retentionPeriod": 3600,
          "timeout": 30,
        },
        "type": "@winglang/sdk.cloud.Queue",
      },
      {
        "attrs": {},
        "path": "root/my_queue/my_queue-QueueEventMapping-e645076f",
        "props": {
          "publisher": "\${wsim#root/my_queue#attrs.handle}",
          "subscriber": "\${wsim#root/my_queue/my_queue-SetConsumer-e645076f#attrs.handle}",
          "subscriptionProps": {
            "batchSize": 1,
          },
        },
        "type": "@winglang/sdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
    "types": {
      "@winglang/sdk.cloud.Api": {
        "className": "Api",
        "sourcePath": "<ABSOLUTE PATH>/api.inflight.js",
      },
      "@winglang/sdk.cloud.Bucket": {
        "className": "Bucket",
        "sourcePath": "<ABSOLUTE PATH>/bucket.inflight.js",
      },
      "@winglang/sdk.cloud.Counter": {
        "className": "Counter",
        "sourcePath": "<ABSOLUTE PATH>/counter.inflight.js",
      },
      "@winglang/sdk.cloud.Domain": {
        "className": "Domain",
        "sourcePath": "<ABSOLUTE PATH>/domain.inflight.js",
      },
      "@winglang/sdk.cloud.Function": {
        "className": "Function",
        "sourcePath": "<ABSOLUTE PATH>/function.inflight.js",
      },
      "@winglang/sdk.cloud.OnDeploy": {
        "className": "OnDeploy",
        "sourcePath": "<ABSOLUTE PATH>/on-deploy.inflight.js",
      },
      "@winglang/sdk.cloud.Queue": {
        "className": "Queue",
        "sourcePath": "<ABSOLUTE PATH>/queue.inflight.js",
      },
      "@winglang/sdk.cloud.Schedule": {
        "className": "Schedule",
        "sourcePath": "<ABSOLUTE PATH>/schedule.inflight.js",
      },
      "@winglang/sdk.cloud.Secret": {
        "className": "Secret",
        "sourcePath": "<ABSOLUTE PATH>/secret.inflight.js",
      },
      "@winglang/sdk.cloud.Service": {
        "className": "Service",
        "sourcePath": "<ABSOLUTE PATH>/service.inflight.js",
      },
      "@winglang/sdk.cloud.Topic": {
        "className": "Topic",
        "sourcePath": "<ABSOLUTE PATH>/topic.inflight.js",
      },
      "@winglang/sdk.cloud.Website": {
        "className": "Website",
        "sourcePath": "<ABSOLUTE PATH>/website.inflight.js",
      },
      "@winglang/sdk.ex.DynamodbTable": {
        "className": "DynamodbTable",
        "sourcePath": "<ABSOLUTE PATH>/dynamodb-table.inflight.js",
      },
      "@winglang/sdk.ex.ReactApp": {
        "className": "ReactApp",
        "sourcePath": "<ABSOLUTE PATH>/react-app.inflight.js",
      },
      "@winglang/sdk.ex.Redis": {
        "className": "Redis",
        "sourcePath": "<ABSOLUTE PATH>/redis.inflight.js",
      },
      "@winglang/sdk.ex.Table": {
        "className": "Table",
        "sourcePath": "<ABSOLUTE PATH>/table.inflight.js",
      },
      "@winglang/sdk.sim.EventMapping": {
        "className": "EventMapping",
        "sourcePath": "<ABSOLUTE PATH>/event-mapping.inflight.js",
      },
      "@winglang/sdk.sim.State": {
        "className": "State",
        "sourcePath": "<ABSOLUTE PATH>/state.inflight.js",
      },
      "@winglang/sdk.std.TestRunner": {
        "className": "TestRunner",
        "sourcePath": "<ABSOLUTE PATH>/test-runner.inflight.js",
      },
    },
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.70",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.70",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_queue": {
          "children": {
            "my_queue-QueueEventMapping-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.70",
              },
              "display": {
                "hidden": true,
              },
              "id": "my_queue-QueueEventMapping-e645076f",
              "path": "root/my_queue/my_queue-QueueEventMapping-e645076f",
            },
            "my_queue-SetConsumer-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.70",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "sourceModule": "@winglang/sdk",
                "title": "setConsumer()",
              },
              "id": "my_queue-SetConsumer-e645076f",
              "path": "root/my_queue/my_queue-SetConsumer-e645076f",
            },
            "my_queue-SetConsumerHandler-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.70",
              },
              "display": {
                "hidden": true,
              },
              "id": "my_queue-SetConsumerHandler-e645076f",
              "path": "root/my_queue/my_queue-SetConsumerHandler-e645076f",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.70",
          },
          "display": {
            "description": "A distributed message queue",
            "title": "Queue",
          },
          "id": "my_queue",
          "path": "root/my_queue",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.2.70",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`messages are requeued if the function fails after timeout 1`] = `
[
  "@winglang/sdk.std.TestRunner created.",
  "@winglang/sdk.cloud.Function created.",
  "@winglang/sdk.cloud.Queue created.",
  "@winglang/sdk.sim.EventMapping created.",
  "Push (messages=BAD MESSAGE).",
  "Sending messages (messages=[\\"BAD MESSAGE\\"], subscriber=sim-1).",
  "Invoke (payload=\\"{\\\\\\"messages\\\\\\":[\\\\\\"BAD MESSAGE\\\\\\"]}\\").",
  "Subscriber error - returning 1 messages to queue: ERROR",
  "@winglang/sdk.sim.EventMapping deleted.",
  "@winglang/sdk.cloud.Queue deleted.",
  "@winglang/sdk.cloud.Function deleted.",
  "@winglang/sdk.std.TestRunner deleted.",
  "1 messages pushed back to queue after visibility timeout.",
]
`;

exports[`messages are requeued if the function fails after timeout 2`] = `
{
  ".wing/my_queue-setconsumer-e645076f_c8ddc1ce.js": "\\"use strict\\";
exports.handler = async function(event) {
  return await (new (require(\\"[REDACTED]/wingsdk/src/target-sim/queue.setconsumer.inflight.js\\")).QueueSetConsumerHandlerClient({ handler: new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  
async handle(message) {
  if (message === \\"BAD MESSAGE\\") {
    throw new Error(\\"ERROR\\");
  }
}
};
})())({

}), args: {} })).handle(event);
};",
  "connections.json": {
    "connections": [
      {
        "name": "handle()",
        "source": "root/my_queue/my_queue-SetConsumer-e645076f",
        "target": "root/Handler",
      },
      {
        "name": "$inflight_init()",
        "source": "root/my_queue/my_queue-SetConsumer-e645076f",
        "target": "root/Handler",
      },
      {
        "name": "setConsumer()",
        "source": "root/my_queue",
        "target": "root/my_queue/my_queue-SetConsumer-e645076f",
      },
    ],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "@winglang/sdk.std.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_queue/my_queue-SetConsumer-e645076f",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/my_queue-setconsumer-e645076f_c8ddc1ce.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "@winglang/sdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_queue",
        "props": {
          "retentionPeriod": 3600,
          "timeout": 1,
        },
        "type": "@winglang/sdk.cloud.Queue",
      },
      {
        "attrs": {},
        "path": "root/my_queue/my_queue-QueueEventMapping-e645076f",
        "props": {
          "publisher": "\${wsim#root/my_queue#attrs.handle}",
          "subscriber": "\${wsim#root/my_queue/my_queue-SetConsumer-e645076f#attrs.handle}",
          "subscriptionProps": {
            "batchSize": 1,
          },
        },
        "type": "@winglang/sdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
    "types": {
      "@winglang/sdk.cloud.Api": {
        "className": "Api",
        "sourcePath": "<ABSOLUTE PATH>/api.inflight.js",
      },
      "@winglang/sdk.cloud.Bucket": {
        "className": "Bucket",
        "sourcePath": "<ABSOLUTE PATH>/bucket.inflight.js",
      },
      "@winglang/sdk.cloud.Counter": {
        "className": "Counter",
        "sourcePath": "<ABSOLUTE PATH>/counter.inflight.js",
      },
      "@winglang/sdk.cloud.Domain": {
        "className": "Domain",
        "sourcePath": "<ABSOLUTE PATH>/domain.inflight.js",
      },
      "@winglang/sdk.cloud.Function": {
        "className": "Function",
        "sourcePath": "<ABSOLUTE PATH>/function.inflight.js",
      },
      "@winglang/sdk.cloud.OnDeploy": {
        "className": "OnDeploy",
        "sourcePath": "<ABSOLUTE PATH>/on-deploy.inflight.js",
      },
      "@winglang/sdk.cloud.Queue": {
        "className": "Queue",
        "sourcePath": "<ABSOLUTE PATH>/queue.inflight.js",
      },
      "@winglang/sdk.cloud.Schedule": {
        "className": "Schedule",
        "sourcePath": "<ABSOLUTE PATH>/schedule.inflight.js",
      },
      "@winglang/sdk.cloud.Secret": {
        "className": "Secret",
        "sourcePath": "<ABSOLUTE PATH>/secret.inflight.js",
      },
      "@winglang/sdk.cloud.Service": {
        "className": "Service",
        "sourcePath": "<ABSOLUTE PATH>/service.inflight.js",
      },
      "@winglang/sdk.cloud.Topic": {
        "className": "Topic",
        "sourcePath": "<ABSOLUTE PATH>/topic.inflight.js",
      },
      "@winglang/sdk.cloud.Website": {
        "className": "Website",
        "sourcePath": "<ABSOLUTE PATH>/website.inflight.js",
      },
      "@winglang/sdk.ex.DynamodbTable": {
        "className": "DynamodbTable",
        "sourcePath": "<ABSOLUTE PATH>/dynamodb-table.inflight.js",
      },
      "@winglang/sdk.ex.ReactApp": {
        "className": "ReactApp",
        "sourcePath": "<ABSOLUTE PATH>/react-app.inflight.js",
      },
      "@winglang/sdk.ex.Redis": {
        "className": "Redis",
        "sourcePath": "<ABSOLUTE PATH>/redis.inflight.js",
      },
      "@winglang/sdk.ex.Table": {
        "className": "Table",
        "sourcePath": "<ABSOLUTE PATH>/table.inflight.js",
      },
      "@winglang/sdk.sim.EventMapping": {
        "className": "EventMapping",
        "sourcePath": "<ABSOLUTE PATH>/event-mapping.inflight.js",
      },
      "@winglang/sdk.sim.State": {
        "className": "State",
        "sourcePath": "<ABSOLUTE PATH>/state.inflight.js",
      },
      "@winglang/sdk.std.TestRunner": {
        "className": "TestRunner",
        "sourcePath": "<ABSOLUTE PATH>/test-runner.inflight.js",
      },
    },
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.70",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.70",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_queue": {
          "children": {
            "my_queue-QueueEventMapping-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.70",
              },
              "display": {
                "hidden": true,
              },
              "id": "my_queue-QueueEventMapping-e645076f",
              "path": "root/my_queue/my_queue-QueueEventMapping-e645076f",
            },
            "my_queue-SetConsumer-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.70",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "sourceModule": "@winglang/sdk",
                "title": "setConsumer()",
              },
              "id": "my_queue-SetConsumer-e645076f",
              "path": "root/my_queue/my_queue-SetConsumer-e645076f",
            },
            "my_queue-SetConsumerHandler-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.70",
              },
              "display": {
                "hidden": true,
              },
              "id": "my_queue-SetConsumerHandler-e645076f",
              "path": "root/my_queue/my_queue-SetConsumerHandler-e645076f",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.70",
          },
          "display": {
            "description": "A distributed message queue",
            "title": "Queue",
          },
          "id": "my_queue",
          "path": "root/my_queue",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.2.70",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`push rejects empty message 1`] = `
[
  "@winglang/sdk.std.TestRunner created.",
  "@winglang/sdk.cloud.Queue created.",
  "Push (messages=).",
  "@winglang/sdk.cloud.Queue deleted.",
  "@winglang/sdk.std.TestRunner deleted.",
]
`;

exports[`push rejects empty message 2`] = `
{
  "connections.json": {
    "connections": [],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "@winglang/sdk.std.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_queue",
        "props": {
          "retentionPeriod": 3600,
          "timeout": 30,
        },
        "type": "@winglang/sdk.cloud.Queue",
      },
    ],
    "sdkVersion": "0.0.0",
    "types": {
      "@winglang/sdk.cloud.Api": {
        "className": "Api",
        "sourcePath": "<ABSOLUTE PATH>/api.inflight.js",
      },
      "@winglang/sdk.cloud.Bucket": {
        "className": "Bucket",
        "sourcePath": "<ABSOLUTE PATH>/bucket.inflight.js",
      },
      "@winglang/sdk.cloud.Counter": {
        "className": "Counter",
        "sourcePath": "<ABSOLUTE PATH>/counter.inflight.js",
      },
      "@winglang/sdk.cloud.Domain": {
        "className": "Domain",
        "sourcePath": "<ABSOLUTE PATH>/domain.inflight.js",
      },
      "@winglang/sdk.cloud.Function": {
        "className": "Function",
        "sourcePath": "<ABSOLUTE PATH>/function.inflight.js",
      },
      "@winglang/sdk.cloud.OnDeploy": {
        "className": "OnDeploy",
        "sourcePath": "<ABSOLUTE PATH>/on-deploy.inflight.js",
      },
      "@winglang/sdk.cloud.Queue": {
        "className": "Queue",
        "sourcePath": "<ABSOLUTE PATH>/queue.inflight.js",
      },
      "@winglang/sdk.cloud.Schedule": {
        "className": "Schedule",
        "sourcePath": "<ABSOLUTE PATH>/schedule.inflight.js",
      },
      "@winglang/sdk.cloud.Secret": {
        "className": "Secret",
        "sourcePath": "<ABSOLUTE PATH>/secret.inflight.js",
      },
      "@winglang/sdk.cloud.Service": {
        "className": "Service",
        "sourcePath": "<ABSOLUTE PATH>/service.inflight.js",
      },
      "@winglang/sdk.cloud.Topic": {
        "className": "Topic",
        "sourcePath": "<ABSOLUTE PATH>/topic.inflight.js",
      },
      "@winglang/sdk.cloud.Website": {
        "className": "Website",
        "sourcePath": "<ABSOLUTE PATH>/website.inflight.js",
      },
      "@winglang/sdk.ex.DynamodbTable": {
        "className": "DynamodbTable",
        "sourcePath": "<ABSOLUTE PATH>/dynamodb-table.inflight.js",
      },
      "@winglang/sdk.ex.ReactApp": {
        "className": "ReactApp",
        "sourcePath": "<ABSOLUTE PATH>/react-app.inflight.js",
      },
      "@winglang/sdk.ex.Redis": {
        "className": "Redis",
        "sourcePath": "<ABSOLUTE PATH>/redis.inflight.js",
      },
      "@winglang/sdk.ex.Table": {
        "className": "Table",
        "sourcePath": "<ABSOLUTE PATH>/table.inflight.js",
      },
      "@winglang/sdk.sim.EventMapping": {
        "className": "EventMapping",
        "sourcePath": "<ABSOLUTE PATH>/event-mapping.inflight.js",
      },
      "@winglang/sdk.sim.State": {
        "className": "State",
        "sourcePath": "<ABSOLUTE PATH>/state.inflight.js",
      },
      "@winglang/sdk.std.TestRunner": {
        "className": "TestRunner",
        "sourcePath": "<ABSOLUTE PATH>/test-runner.inflight.js",
      },
    },
  },
  "tree.json": {
    "tree": {
      "children": {
        "cloud.TestRunner": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.70",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_queue": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.70",
          },
          "display": {
            "description": "A distributed message queue",
            "title": "Queue",
          },
          "id": "my_queue",
          "path": "root/my_queue",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.2.70",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`queue batch size of 2, purge the queue 1`] = `
[
  "@winglang/sdk.std.TestRunner created.",
  "@winglang/sdk.cloud.Queue created.",
  "Push (messages=A).",
  "Push (messages=B).",
  "ApproxSize ().",
  "Purge ().",
  "ApproxSize ().",
  "@winglang/sdk.cloud.Queue deleted.",
  "@winglang/sdk.std.TestRunner deleted.",
]
`;

exports[`queue batch size of 2, purge the queue 2`] = `
{
  "connections.json": {
    "connections": [],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "@winglang/sdk.std.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_queue",
        "props": {
          "retentionPeriod": 3600,
          "timeout": 30,
        },
        "type": "@winglang/sdk.cloud.Queue",
      },
    ],
    "sdkVersion": "0.0.0",
    "types": {
      "@winglang/sdk.cloud.Api": {
        "className": "Api",
        "sourcePath": "<ABSOLUTE PATH>/api.inflight.js",
      },
      "@winglang/sdk.cloud.Bucket": {
        "className": "Bucket",
        "sourcePath": "<ABSOLUTE PATH>/bucket.inflight.js",
      },
      "@winglang/sdk.cloud.Counter": {
        "className": "Counter",
        "sourcePath": "<ABSOLUTE PATH>/counter.inflight.js",
      },
      "@winglang/sdk.cloud.Domain": {
        "className": "Domain",
        "sourcePath": "<ABSOLUTE PATH>/domain.inflight.js",
      },
      "@winglang/sdk.cloud.Function": {
        "className": "Function",
        "sourcePath": "<ABSOLUTE PATH>/function.inflight.js",
      },
      "@winglang/sdk.cloud.OnDeploy": {
        "className": "OnDeploy",
        "sourcePath": "<ABSOLUTE PATH>/on-deploy.inflight.js",
      },
      "@winglang/sdk.cloud.Queue": {
        "className": "Queue",
        "sourcePath": "<ABSOLUTE PATH>/queue.inflight.js",
      },
      "@winglang/sdk.cloud.Schedule": {
        "className": "Schedule",
        "sourcePath": "<ABSOLUTE PATH>/schedule.inflight.js",
      },
      "@winglang/sdk.cloud.Secret": {
        "className": "Secret",
        "sourcePath": "<ABSOLUTE PATH>/secret.inflight.js",
      },
      "@winglang/sdk.cloud.Service": {
        "className": "Service",
        "sourcePath": "<ABSOLUTE PATH>/service.inflight.js",
      },
      "@winglang/sdk.cloud.Topic": {
        "className": "Topic",
        "sourcePath": "<ABSOLUTE PATH>/topic.inflight.js",
      },
      "@winglang/sdk.cloud.Website": {
        "className": "Website",
        "sourcePath": "<ABSOLUTE PATH>/website.inflight.js",
      },
      "@winglang/sdk.ex.DynamodbTable": {
        "className": "DynamodbTable",
        "sourcePath": "<ABSOLUTE PATH>/dynamodb-table.inflight.js",
      },
      "@winglang/sdk.ex.ReactApp": {
        "className": "ReactApp",
        "sourcePath": "<ABSOLUTE PATH>/react-app.inflight.js",
      },
      "@winglang/sdk.ex.Redis": {
        "className": "Redis",
        "sourcePath": "<ABSOLUTE PATH>/redis.inflight.js",
      },
      "@winglang/sdk.ex.Table": {
        "className": "Table",
        "sourcePath": "<ABSOLUTE PATH>/table.inflight.js",
      },
      "@winglang/sdk.sim.EventMapping": {
        "className": "EventMapping",
        "sourcePath": "<ABSOLUTE PATH>/event-mapping.inflight.js",
      },
      "@winglang/sdk.sim.State": {
        "className": "State",
        "sourcePath": "<ABSOLUTE PATH>/state.inflight.js",
      },
      "@winglang/sdk.std.TestRunner": {
        "className": "TestRunner",
        "sourcePath": "<ABSOLUTE PATH>/test-runner.inflight.js",
      },
    },
  },
  "tree.json": {
    "tree": {
      "children": {
        "cloud.TestRunner": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.70",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_queue": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.70",
          },
          "display": {
            "description": "A distributed message queue",
            "title": "Queue",
          },
          "id": "my_queue",
          "path": "root/my_queue",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.2.70",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`queue with one subscriber, batch size of 5 1`] = `
{
  ".wing/function_c8ab799f.js": "\\"use strict\\";
exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle() {
  await this.queue.push(\\"A\\");
  await this.queue.push(\\"B\\");
  await this.queue.push(\\"C\\");
  await this.queue.push(\\"D\\");
  await this.queue.push(\\"E\\");
  await this.queue.push(\\"F\\");
}
};
})())({
queue: (function() {
  let handle = process.env.QUEUE_HANDLE_54fcf4cd;
  if (!handle) {
    throw new Error(\\"Missing environment variable: QUEUE_HANDLE_54fcf4cd\\");
  }
  const simulatorUrl = process.env.WING_SIMULATOR_URL;
  if (!simulatorUrl) {
    throw new Error(\\"Missing environment variable: WING_SIMULATOR_URL\\");
  }
  return require(\\"@winglang/sdk/lib/simulator/client\\").makeSimulatorClient(simulatorUrl, handle);
})()
})).handle(event);
};",
  ".wing/my_queue-setconsumer-e645076f_c8ddc1ce.js": "\\"use strict\\";
exports.handler = async function(event) {
  return await (new (require(\\"[REDACTED]/wingsdk/src/target-sim/queue.setconsumer.inflight.js\\")).QueueSetConsumerHandlerClient({ handler: new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  
async handle(message) {
  if (message === \\"BAD MESSAGE\\") {
    throw new Error(\\"ERROR\\");
  }
}
};
})())({

}), args: {} })).handle(event);
};",
  "connections.json": {
    "connections": [
      {
        "name": "handle()",
        "source": "root/my_queue/my_queue-SetConsumer-e645076f",
        "target": "root/Handler",
      },
      {
        "name": "$inflight_init()",
        "source": "root/my_queue/my_queue-SetConsumer-e645076f",
        "target": "root/Handler",
      },
      {
        "name": "setConsumer()",
        "source": "root/my_queue",
        "target": "root/my_queue/my_queue-SetConsumer-e645076f",
      },
      {
        "name": "push()",
        "source": "root/my_queue_messages/Function",
        "target": "root/my_queue",
      },
      {
        "name": "$inflight_init()",
        "source": "root/my_queue_messages/Function",
        "target": "root/my_queue",
      },
    ],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "@winglang/sdk.std.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_queue/my_queue-SetConsumer-e645076f",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/my_queue-setconsumer-e645076f_c8ddc1ce.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "@winglang/sdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_queue",
        "props": {
          "retentionPeriod": 3600,
          "timeout": 30,
        },
        "type": "@winglang/sdk.cloud.Queue",
      },
      {
        "attrs": {},
        "path": "root/my_queue/my_queue-QueueEventMapping-e645076f",
        "props": {
          "publisher": "\${wsim#root/my_queue#attrs.handle}",
          "subscriber": "\${wsim#root/my_queue/my_queue-SetConsumer-e645076f#attrs.handle}",
          "subscriptionProps": {
            "batchSize": 5,
          },
        },
        "type": "@winglang/sdk.sim.EventMapping",
      },
      {
        "attrs": {},
        "path": "root/my_queue_messages/Function",
        "props": {
          "environmentVariables": {
            "QUEUE_HANDLE_54fcf4cd": "\${wsim#root/my_queue#attrs.handle}",
          },
          "sourceCodeFile": ".wing/function_c8ab799f.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "@winglang/sdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_queue_messages",
        "props": {
          "functionHandle": "\${wsim#root/my_queue_messages/Function#attrs.handle}",
        },
        "type": "@winglang/sdk.cloud.OnDeploy",
      },
    ],
    "sdkVersion": "0.0.0",
    "types": {
      "@winglang/sdk.cloud.Api": {
        "className": "Api",
        "sourcePath": "<ABSOLUTE PATH>/api.inflight.js",
      },
      "@winglang/sdk.cloud.Bucket": {
        "className": "Bucket",
        "sourcePath": "<ABSOLUTE PATH>/bucket.inflight.js",
      },
      "@winglang/sdk.cloud.Counter": {
        "className": "Counter",
        "sourcePath": "<ABSOLUTE PATH>/counter.inflight.js",
      },
      "@winglang/sdk.cloud.Domain": {
        "className": "Domain",
        "sourcePath": "<ABSOLUTE PATH>/domain.inflight.js",
      },
      "@winglang/sdk.cloud.Function": {
        "className": "Function",
        "sourcePath": "<ABSOLUTE PATH>/function.inflight.js",
      },
      "@winglang/sdk.cloud.OnDeploy": {
        "className": "OnDeploy",
        "sourcePath": "<ABSOLUTE PATH>/on-deploy.inflight.js",
      },
      "@winglang/sdk.cloud.Queue": {
        "className": "Queue",
        "sourcePath": "<ABSOLUTE PATH>/queue.inflight.js",
      },
      "@winglang/sdk.cloud.Schedule": {
        "className": "Schedule",
        "sourcePath": "<ABSOLUTE PATH>/schedule.inflight.js",
      },
      "@winglang/sdk.cloud.Secret": {
        "className": "Secret",
        "sourcePath": "<ABSOLUTE PATH>/secret.inflight.js",
      },
      "@winglang/sdk.cloud.Service": {
        "className": "Service",
        "sourcePath": "<ABSOLUTE PATH>/service.inflight.js",
      },
      "@winglang/sdk.cloud.Topic": {
        "className": "Topic",
        "sourcePath": "<ABSOLUTE PATH>/topic.inflight.js",
      },
      "@winglang/sdk.cloud.Website": {
        "className": "Website",
        "sourcePath": "<ABSOLUTE PATH>/website.inflight.js",
      },
      "@winglang/sdk.ex.DynamodbTable": {
        "className": "DynamodbTable",
        "sourcePath": "<ABSOLUTE PATH>/dynamodb-table.inflight.js",
      },
      "@winglang/sdk.ex.ReactApp": {
        "className": "ReactApp",
        "sourcePath": "<ABSOLUTE PATH>/react-app.inflight.js",
      },
      "@winglang/sdk.ex.Redis": {
        "className": "Redis",
        "sourcePath": "<ABSOLUTE PATH>/redis.inflight.js",
      },
      "@winglang/sdk.ex.Table": {
        "className": "Table",
        "sourcePath": "<ABSOLUTE PATH>/table.inflight.js",
      },
      "@winglang/sdk.sim.EventMapping": {
        "className": "EventMapping",
        "sourcePath": "<ABSOLUTE PATH>/event-mapping.inflight.js",
      },
      "@winglang/sdk.sim.State": {
        "className": "State",
        "sourcePath": "<ABSOLUTE PATH>/state.inflight.js",
      },
      "@winglang/sdk.std.TestRunner": {
        "className": "TestRunner",
        "sourcePath": "<ABSOLUTE PATH>/test-runner.inflight.js",
      },
    },
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.70",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "OnDeployHandler": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.70",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "OnDeployHandler",
          "path": "root/OnDeployHandler",
        },
        "cloud.TestRunner": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.70",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_queue": {
          "children": {
            "my_queue-QueueEventMapping-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.70",
              },
              "display": {
                "hidden": true,
              },
              "id": "my_queue-QueueEventMapping-e645076f",
              "path": "root/my_queue/my_queue-QueueEventMapping-e645076f",
            },
            "my_queue-SetConsumer-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.70",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "sourceModule": "@winglang/sdk",
                "title": "setConsumer()",
              },
              "id": "my_queue-SetConsumer-e645076f",
              "path": "root/my_queue/my_queue-SetConsumer-e645076f",
            },
            "my_queue-SetConsumerHandler-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.70",
              },
              "display": {
                "hidden": true,
              },
              "id": "my_queue-SetConsumerHandler-e645076f",
              "path": "root/my_queue/my_queue-SetConsumerHandler-e645076f",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.70",
          },
          "display": {
            "description": "A distributed message queue",
            "title": "Queue",
          },
          "id": "my_queue",
          "path": "root/my_queue",
        },
        "my_queue_messages": {
          "children": {
            "Function": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.70",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "sourceModule": "@winglang/sdk",
                "title": "Function",
              },
              "id": "Function",
              "path": "root/my_queue_messages/Function",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.70",
          },
          "display": {
            "description": "Run code during the app's deployment.",
            "title": "OnDeploy",
          },
          "id": "my_queue_messages",
          "path": "root/my_queue_messages",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.2.70",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`queue with one subscriber, default batch size of 1 1`] = `
{
  ".wing/my_queue-setconsumer-e645076f_c8ddc1ce.js": "\\"use strict\\";
exports.handler = async function(event) {
  return await (new (require(\\"[REDACTED]/wingsdk/src/target-sim/queue.setconsumer.inflight.js\\")).QueueSetConsumerHandlerClient({ handler: new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  
async handle(message) {
  if (message === \\"BAD MESSAGE\\") {
    throw new Error(\\"ERROR\\");
  }
}
};
})())({

}), args: {} })).handle(event);
};",
  "connections.json": {
    "connections": [
      {
        "name": "handle()",
        "source": "root/my_queue/my_queue-SetConsumer-e645076f",
        "target": "root/Handler",
      },
      {
        "name": "$inflight_init()",
        "source": "root/my_queue/my_queue-SetConsumer-e645076f",
        "target": "root/Handler",
      },
      {
        "name": "setConsumer()",
        "source": "root/my_queue",
        "target": "root/my_queue/my_queue-SetConsumer-e645076f",
      },
    ],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "@winglang/sdk.std.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_queue/my_queue-SetConsumer-e645076f",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/my_queue-setconsumer-e645076f_c8ddc1ce.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "@winglang/sdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_queue",
        "props": {
          "retentionPeriod": 3600,
          "timeout": 30,
        },
        "type": "@winglang/sdk.cloud.Queue",
      },
      {
        "attrs": {},
        "path": "root/my_queue/my_queue-QueueEventMapping-e645076f",
        "props": {
          "publisher": "\${wsim#root/my_queue#attrs.handle}",
          "subscriber": "\${wsim#root/my_queue/my_queue-SetConsumer-e645076f#attrs.handle}",
          "subscriptionProps": {
            "batchSize": 1,
          },
        },
        "type": "@winglang/sdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
    "types": {
      "@winglang/sdk.cloud.Api": {
        "className": "Api",
        "sourcePath": "<ABSOLUTE PATH>/api.inflight.js",
      },
      "@winglang/sdk.cloud.Bucket": {
        "className": "Bucket",
        "sourcePath": "<ABSOLUTE PATH>/bucket.inflight.js",
      },
      "@winglang/sdk.cloud.Counter": {
        "className": "Counter",
        "sourcePath": "<ABSOLUTE PATH>/counter.inflight.js",
      },
      "@winglang/sdk.cloud.Domain": {
        "className": "Domain",
        "sourcePath": "<ABSOLUTE PATH>/domain.inflight.js",
      },
      "@winglang/sdk.cloud.Function": {
        "className": "Function",
        "sourcePath": "<ABSOLUTE PATH>/function.inflight.js",
      },
      "@winglang/sdk.cloud.OnDeploy": {
        "className": "OnDeploy",
        "sourcePath": "<ABSOLUTE PATH>/on-deploy.inflight.js",
      },
      "@winglang/sdk.cloud.Queue": {
        "className": "Queue",
        "sourcePath": "<ABSOLUTE PATH>/queue.inflight.js",
      },
      "@winglang/sdk.cloud.Schedule": {
        "className": "Schedule",
        "sourcePath": "<ABSOLUTE PATH>/schedule.inflight.js",
      },
      "@winglang/sdk.cloud.Secret": {
        "className": "Secret",
        "sourcePath": "<ABSOLUTE PATH>/secret.inflight.js",
      },
      "@winglang/sdk.cloud.Service": {
        "className": "Service",
        "sourcePath": "<ABSOLUTE PATH>/service.inflight.js",
      },
      "@winglang/sdk.cloud.Topic": {
        "className": "Topic",
        "sourcePath": "<ABSOLUTE PATH>/topic.inflight.js",
      },
      "@winglang/sdk.cloud.Website": {
        "className": "Website",
        "sourcePath": "<ABSOLUTE PATH>/website.inflight.js",
      },
      "@winglang/sdk.ex.DynamodbTable": {
        "className": "DynamodbTable",
        "sourcePath": "<ABSOLUTE PATH>/dynamodb-table.inflight.js",
      },
      "@winglang/sdk.ex.ReactApp": {
        "className": "ReactApp",
        "sourcePath": "<ABSOLUTE PATH>/react-app.inflight.js",
      },
      "@winglang/sdk.ex.Redis": {
        "className": "Redis",
        "sourcePath": "<ABSOLUTE PATH>/redis.inflight.js",
      },
      "@winglang/sdk.ex.Table": {
        "className": "Table",
        "sourcePath": "<ABSOLUTE PATH>/table.inflight.js",
      },
      "@winglang/sdk.sim.EventMapping": {
        "className": "EventMapping",
        "sourcePath": "<ABSOLUTE PATH>/event-mapping.inflight.js",
      },
      "@winglang/sdk.sim.State": {
        "className": "State",
        "sourcePath": "<ABSOLUTE PATH>/state.inflight.js",
      },
      "@winglang/sdk.std.TestRunner": {
        "className": "TestRunner",
        "sourcePath": "<ABSOLUTE PATH>/test-runner.inflight.js",
      },
    },
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.70",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.70",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_queue": {
          "children": {
            "my_queue-QueueEventMapping-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.70",
              },
              "display": {
                "hidden": true,
              },
              "id": "my_queue-QueueEventMapping-e645076f",
              "path": "root/my_queue/my_queue-QueueEventMapping-e645076f",
            },
            "my_queue-SetConsumer-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.70",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "sourceModule": "@winglang/sdk",
                "title": "setConsumer()",
              },
              "id": "my_queue-SetConsumer-e645076f",
              "path": "root/my_queue/my_queue-SetConsumer-e645076f",
            },
            "my_queue-SetConsumerHandler-e645076f": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.2.70",
              },
              "display": {
                "hidden": true,
              },
              "id": "my_queue-SetConsumerHandler-e645076f",
              "path": "root/my_queue/my_queue-SetConsumerHandler-e645076f",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.2.70",
          },
          "display": {
            "description": "A distributed message queue",
            "title": "Queue",
          },
          "id": "my_queue",
          "path": "root/my_queue",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.2.70",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;
